src/style.scss
@import url('./fonts/calicanto/stylesheet.css');

@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: 'Forte';
  src: url('./fonts/forte.ttf') format('truetype');
  font-display: swap; /* Improve performance */
}

@font-face {
  font-family: 'Bulletto Killa';
  src: url('./fonts/Bulletto_Killa.ttf') format('truetype');
  font-display: swap; /* Improve performance */
}

// Fix full screen behavior (100vh is really buggy on mobile even with the workaround)
html,
body,
main,
section {
  @apply h-full;
}
// Prevent chrome to hide url and bottom tab bar
html {
  @apply overflow-hidden;
}
body {
  @apply fixed overflow-y-scroll w-full h-full;
}

// Main style
html {
  -ms-overflow-style: none; /* IE and Edge */
  //noinspection CssUnknownProperty
  scrollbar-width: none; /* Firefox */
  @apply text-[14px] md:text-[12px] xl:text-[16px] 2xl:text-[18px];
}

::-webkit-scrollbar {
  display: none;
}

::-moz-selection {
  @apply text-white bg-[#AFBD6C];
}

::selection {
  @apply text-white bg-[#AFBD6C];
}

h1 {
  font-family: Forte, Arial, sans-serif;
  @apply text-4xl;
}

h2 {
  font-family: Forte, Arial, sans-serif;
  @apply text-4xl pb-4 mb-4;
}

header {
  @apply fixed top-0 left-0 right-0 z-10;
  @apply flex justify-center items-center p-4 gap-8;
  @apply h-24 max-h-24;
  @apply backdrop-blur-md bg-[#FFFFFFBB];
}

//noinspection CssOverwrittenProperties
main {
  @apply overflow-y-scroll snap-mandatory snap-y;
}

// Disable selection for everything except address text.
section,
header {
  @apply select-none;
}

//noinspection CssOverwrittenProperties
section {
  @apply w-full snap-start text-center pt-24;
}

section > * {
  opacity: 0;
  animation: smooth-reveal 1s linear forwards;
}

@for $i from 1 through 20 {
  section > :nth-child(#{$i}) {
    animation-delay: #{($i - 1) * 0.25}s;
  }
}

.button {
  @apply flex justify-center text-white w-80 p-2 rounded-lg shadow-lg;

  img {
    @apply w-5 mr-2;
    /* Convert contact-button icon from black to white */
    filter: invert(1);
  }
}

/* Accueil */
.chevron-down {
  @apply absolute bottom-3 left-0 right-0 flex items-center justify-center;

  img {
    @apply cursor-pointer p-4 w-11;
  }
}

/* Soins */
/* Carrousel */
.splide__track {
  @apply rounded;
}

.splide__slide img {
  @apply w-full h-auto;
}

.splide__slide {
  @apply relative rounded;
}

.splide__slide div {
  @apply absolute text-lg text-white bg-[#00000099] bottom-0 left-0 right-0 pb-7 pt-7;
}

.splide__pagination__page {
  width: 6px !important;
  height: 6px !important;
}

.oncobulle-logo {
  @apply flex items-center justify-center p-2;

  img {
    @apply w-auto h-36;
  }
}

/* Tarifs */
.prices-button {
  font-family: 'Calicanto', serif;
  @apply grid grid-cols-2 grid-rows-2 gap-4 w-full pl-4 pr-4 m-auto mb-8;
  @apply lg:mb-10 lg:w-2/3;
}

.prices-button span {
  @apply flex select-none text-base justify-center items-center p-1 h-auto min-h-[3.5rem] border border-[#AFBD6C] rounded text-[#AFBD6C];
  @apply transition-colors hover:text-white hover:bg-[#AFBD6C] cursor-pointer;
  @apply md:text-lg md:p-2;
}

.download-button {
  @apply m-auto mt-12 bg-[#AFBD6C] shadow-[#AFBD6C]/20;
}

/* Popup */
.shadow {
  @apply fixed inset-0 bg-white opacity-70 z-30;
  animation: bounced-reveal 250ms ease forwards;
}

.prices-popup {
  font-family: 'Calicanto', serif;
  @apply fixed inset-0 z-50;
  @apply flex flex-col items-center;
  @apply rounded bg-white md:border-8 md:border-[#AFBD6C];
  @apply m-0 sm:m-10 md:mx-20 lg:mx-40;
  @apply shadow-[#00000050] drop-shadow-lg;
  animation: bounced-reveal 250ms ease forwards;

  .title {
    @apply text-center text-2xl block mt-10 mb-4;
    font-family: Forte, Arial, sans-serif;
  }

  img {
    @apply w-4;
    @apply absolute top-4 right-4;
  }

  .care {
    @apply w-[90%] py-1 flex gap-x-2;
    @apply overflow-ellipsis overflow-hidden;
    @apply border-b-2 border-[#AFBD6C];
    @apply lg:py-2;

    .left {
      @apply w-3/4 text-ellipsis text-left;
    }

    .name {
      @apply block;
    }

    .description {
      @apply block text-sm italic;
    }

    .right {
      @apply w-1/4 flex justify-end gap-x-2;

      .duration,
      .price {
        @apply w-auto block;
      }
    }
  }
}

/* Contact */
.contact-button {
  @apply m-auto my-4;
}

.contact-address {
  @apply p-4 select-all;
}

/* Animations */
.animate-smooth-bounce {
  animation: smooth-bounce 2s linear infinite;
}

@keyframes smooth-bounce {
  0% {
    transform: translate3d(0, -5px, 0);
    opacity: 0;
  }
  50% {
    transform: translate3d(0, 0, 0);
    opacity: 1;
  }
  100% {
    transform: translate3d(0, 5px, 0);
    opacity: 0;
  }
}

@keyframes smooth-reveal {
  0% {
    transform: translate3d(0, -10px, 0);
  }
  100% {
    transform: translate3d(0, 0, 0);
    opacity: 1;
  }
}

@keyframes bounced-reveal {
  0% {
    margin: 100%;
    opacity: 0;
  }
  70% {
    opacity: 0.25;
  }
  100% {
    opacity: 1;
  }
}

